Migrate to 1.19